<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.oscarruiz.myapplication.fragments.AddUserFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/loading_layout"
        android:gravity="center"
        android:visibility="gone">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:gravity="center_vertical"
        android:background="@color/colorAccent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/header_text_view"
            android:text="@string/add_user_header"
            style="@style/header_text_view"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:id="@+id/user_image"
            style="@style/edit_profile_user_image"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <ImageView
            android:id="@+id/change_profile_image"
            style="@style/edit_profile_change_profile_image"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp">
            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/user_name_edit_text"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:hint="@string/type_user_name"
                android:textSize="16sp"
                android:textAlignment="center"
                android:inputType="text"
                android:maxLines="1"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/birthdate_edit_text"
                android:hint="@string/type_user_birthdate"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:paddingStart="50dp"
                android:drawableLeft="@mipmap/calendar_button"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="60dp"
        android:gravity="center_horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancel_button"
            android:layout_marginStart="30dp"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/accept_button"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:text="@string/accept"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"/>
    </LinearLayout>

</LinearLayout>
